--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "ma-residence.fr js SDK",
   "main": "lib/mr-client.js",
   "scripts": {
-    "build": "npm run build:umd && npm run build:examples",
-    "build:umd": "webpack",
-    "build:examples": "cp mr-client.min.js examples/mr-client.min.js",
+    "build": "webpack",
     "postinstall": "npm run build --verbose",
     "lint": "eslint src",
     "flow": "flow status",
@@ -28,16 +26,16 @@
     "babel-cli": "^6.16.0",
     "babel-core": "^6.16.0",
     "babel-eslint": "^7.0.0",
-    "babel-loader": "^6.2.5",
+    "babel-loader": "^6.4.1",
     "babel-plugin-transform-class-properties": "^6.16.0",
     "babel-plugin-transform-flow-strip-types": "^6.14.0",
     "babel-plugin-transform-object-assign": "^6.8.0",
     "babel-preset-es2015": "^6.16.0",
-    "eslint": "^4.18.2",
+    "eslint": "^5.16.0",
     "eslint-loader": "^1.5.0",
     "expect": "^1.20.2",
     "flow-bin": "^0.32.0",
-    "mocha": "2.3.3",
+    "mocha": "^6.2.0",
     "node-fetch": "^1.6.3",
     "path": "^0.12.7",
     "webpack": "^1.13.2"
