--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,8 @@
     "node": true,
     "mocha": true
   },
-  "parser": "babel-eslint",
+  "parser": "@babel/eslint-parser",
+  "plugins": ["@babel"],
   "rules": {
     "semi": [2, "always"],
     "no-multiple-empty-lines": [2, {"max": 1}],
