--- a/package.json
+++ b/package.json
@@ -1,44 +1,50 @@
 {
-  "name": "mr-js-sdk",
-  "version": "1.0.0",
+  "name": "@ma-residence/mr-js-sdk",
   "description": "ma-residence.fr js SDK",
   "main": "lib/mr-client.js",
   "scripts": {
     "build": "webpack",
     "postinstall": "npm run build --verbose",
     "lint": "eslint src",
-    "flow": "flow status",
-    "test": "npm run lint && npm run flow && npm run test:node",
-    "test:node": "mocha --compilers js:babel-core/register --require test/setup --recursive"
+    "flow": "flow",
+    "test": "mocha --compilers js:@babel/register --require test/setup --recursive"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/ma-residence"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ma-residence/js-sdk.git"
+    "url": "shh://github.com/ma-residence/js-sdk.git",
+    "directory": "@ma-residence/mr-js-sdk"
   },
   "author": "",
-  "private": true,
   "license": "UNLICENSED",
   "bugs": {
     "url": "https://github.com/ma-residence/js-sdk/issues"
   },
   "homepage": "https://github.com/ma-residence/js-sdk#readme",
   "devDependencies": {
-    "babel-cli": "^6.16.0",
-    "babel-core": "^6.16.0",
-    "babel-eslint": "^7.0.0",
-    "babel-loader": "^6.4.1",
-    "babel-plugin-transform-class-properties": "^6.16.0",
-    "babel-plugin-transform-flow-strip-types": "^6.14.0",
-    "babel-plugin-transform-object-assign": "^6.8.0",
-    "babel-preset-es2015": "^6.16.0",
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
+    "@babel/eslint-parser": "^7.11.5",
+    "@babel/eslint-plugin": "^7.11.5",
+    "@babel/node": "^7.10.5",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-transform-flow-strip-types": "^7.10.4",
+    "@babel/plugin-transform-object-assign": "^7.10.4",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/register": "^7.11.5",
+    "babel-loader": "^8.1.0",
     "eslint": "^5.16.0",
     "eslint-loader": "^1.5.0",
     "expect": "^1.20.2",
-    "flow-bin": "^0.32.0",
-    "mocha": "^6.2.0",
+    "flow-bin": "^0.135.0",
+    "mocha": "^5.2.0",
     "node-fetch": "^1.6.3",
     "path": "^0.12.7",
-    "webpack": "^1.13.2"
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
   },
   "dependencies": {
     "nock": "^9.0.2",
