--- a/.github/workflows/create_npm_package.yaml
+++ b/.github/workflows/create_npm_package.yaml
@@ -2,7 +2,7 @@ name: Create npm package
 
 on:
   release:
-    types: [created]
+    types: [published]
 
 jobs:
   create_package:
@@ -10,9 +10,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
-      - name: Set env
-        run: echo ::set-env name=RELEASE_VERSION::${GITHUB_REF#refs/*/}
 
       - name: Set up node
         uses: actions/setup-node@v1
@@ -31,7 +28,7 @@ jobs:
         run: npx typescript ./dist/index.js --declaration --allowJs --emitDeclarationOnly --outDir ./dist
 
       - name: Set package version
-        run: sed -i 's/RELEASE_VERSION/'"$RELEASE_VERSION"'/g' dist/package.json
+        run: sed -i 's/RELEASE_VERSION/'"${{ github.event.release.tag_name }}"'/g' dist/package.json
 
       - name: Publish package
         run: |
